Sat Jun 21 09:34:14 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/BiDir_GIOP/BiDir_Policy_i.cpp (TAO_BidirectionalPolicy):

	  Corrected base class initialization order in base member
	  initialization list to match class inheritance order.  Fixes a
	  warning.

Sat Jun 21 14:53:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Event_Service/Event_Service.cpp:
          Removed not needed explicit template instantiations

Fri Jun 20 17:45:46 2003  Gan Deng  <dengg@dre.vanderbilt.edu>

        * performance-tests/Sequence_Latency/AMI/run_test.pl
        * performance-tests/Sequence_Latency/AMH/Single_Threaded/run_test.pl
        * performance-tests/Sequence_Latency/DII/run_test.pl
        * performance-tests/Sequence_Latency/DSI/run_test.pl
        * performance-tests/Sequence_Latency/Deferred/run_test.pl
        * performance-tests/Sequence_Latency/Thread_Per_Connection/run_test.pl
        * performance-tests/Sequence_Latency/Thread_Pool/run_test.pl

          Fixed the perl running command line format in order to facilitate
          automatic performance statistics analysis.

Fri Jun 20 16:42:33 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:

	  Fixed more typos. Thanks to Danta Cannarozzi <djc2@cse.wustl.edu>
	  for reporting the problem.

Fri Jun 20 15:42:14 2003  Gan Deng  <dengg@dre.vanderbilt.edu>

	* performance-tests/Sequence_Latency/Deferred/run_test.pl

	  Added this missing file into the directory.

Fri Jun 20 14:48:56 2003  Chris Cleeland  <cleeland_c@ociweb.com>

	* orbsvcs/orbsvcs/Event/EC_Reactive_SupplierControl.cpp:
	* orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp:
	* orbsvcs/orbsvcs/Event/ECG_UDP_Sender.cpp:
	* orbsvcs/orbsvcs/Event/ECG_UDP_Receiver.cpp:
	* orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp:
	* orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
	* orbsvcs/Event_Service/Event_Service.cpp:

	  Added missing explicit instantiations that were causing build