@@ -28,9 +28,9 @@
 #include "ace/pre.h"
 #include "rtportableserver_export.h"
 
-#if defined (TAO_HAS_CORBA_MESSAGING) && TAO_HAS_CORBA_MESSAGING != 0
-
 #include "tao/PortableServer/PortableServerC.h"
+
+#if defined (TAO_HAS_CORBA_MESSAGING) && TAO_HAS_CORBA_MESSAGING != 0
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
